# firth

./: .gitignore  AGENTS.md  README.md  cairn.blueprint  cairn.config.yaml  lake-manifest.json  lakefile.toml
.cairn/: AGENTS.md  feedback.md
.claude/commands/: firth-loop.md
docs/: loop-runbook.md
files/: firth-kernel-spec-draft.md  firth-prd.md
meta/decisions/: agent-diagnostic-envelope.md  autonomous-loop.md  blueprint-edge-semantics.md  component-spec-boundaries.md  diffharness-fuzz-strategy.md  firth-blueprint.md  gap-firth-language-kernel-kappa-cost-table-does-not-categorise.md  gap-firth-language-kernel-kernel-cost-default-keep-kappa-an.md  gap-firth-language-kernel-kernel-formal-gap-add-administrative-push.md  gap-firth-language-kernel-kernel-formal-gap-define-base-type-usage.md  gap-firth-language-kernel-kernel-formal-gap-define-linear-consumption.md  gap-firth-language-kernel-kernel-formal-gap-disambiguate-sigma-notation.md  host-languages.md  kernel-spec-freeze.md  (+12 more)
specs/: component-spec-boundaries.md
src/runtime/vm/: Cargo.toml  LICENSE-MIT  deny.toml  target-spec.md
src/runtime/vm/fixtures/: kernel.tsv
src/runtime/vm/src/: decode.rs  encoding.rs  execute.rs  fixtures.rs  image_bounds.rs  image_encoding.rs  image_patch.rs  image_store.rs  image_types.rs  lib.rs  main.rs  primitives.rs  syntax.rs  tests.rs  tests_basic.rs  tests_conformance.rs  tests_execution.rs  tests_fixtures.rs  tests_image.rs  tests_image_concurrency.rs  tests_patch_validation.rs  types.rs  types_core.rs  validation.rs  word_resolver.rs
src/runtime/vm/tests/: cli.rs
(+123 files in other folders)
