[workspace]
members = ["."]
resolver = "2"

[package]
name = "firth-vm"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
license = "MIT OR Apache-2.0"
description = "Deterministic bootstrap decoder and smoke executor for the Firth VM target"
publish = false

[features]
default = ["std"]
std = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "firth-vm"
path = "src/main.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"

[package.metadata.cargo-deny]
licenses = "deny.toml"
